# Gandalf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
data/: imgui.ini
gb_app/: CMakeLists.txt
gb_app/src/: Main.cpp  cpu.h  gui.cpp  gui.h  main.cpp  main_window.cpp  settings.cpp  settings.h  settings_window.cpp  text.cpp  text.h
gb_app/src/views/: apu_view.cpp  cartridge_view.cpp  cpu_view.cpp  debugger.cpp  debugger.h  gameboy_view.cpp  gameboy_view.h  gui_element.h  io_view.cpp  io_view.h  memory_view.cpp  vram_view.cpp  vram_view.h
gb_lib/: CMakeLists.txt
gb_lib/include/Gameboy/: Cpu.h  Gameboy.h  gameboy.h  model.h
gb_lib/include/gameboy/: cartridge.h  gameboy.h  model.h
gb_lib/include/gandalf/: address_range.h  apu.h  bus.h  cartridge.h  constants.h  cpu.h  cpu_registers.h  dma.h  exception.h  gameboy.h  hdma.h  hram.h  io.h  joypad.h  lcd.h  mbc.h  memory.h  model.h  ppu.h  serial.h  timer.h  timing_handler.h  types.h  util.h  wram.h
gb_lib/include/gandalf/sound/: frame_sequencer.h  frequency_sweep_unit.h  length_counter.h  noise_channel.h  sound_channel.h  square_wave.h  square_wave_channel.h  volume_envelope.h  wave_channel.h
gb_lib/src/: BootROM.cpp  Cpu.cpp  Gameboy.cpp  Memory.cpp  Memory.h  apu.cpp  bootrom.cpp  bootrom.h  bus.cpp  bus.h  cartridge.cpp  cpu.cpp  cpu.h  cpu_registers.h  dma.cpp  gameboy.cpp  hdma.cpp  hram.cpp  io.cpp  joypad.cpp  lcd.cpp  memory.cpp  memory.h  model.cpp  ppu.cpp  serial.cpp  timer.cpp  timing_handler.h  wram.cpp
gb_lib/src/cartridge/: mbc.cpp  mbc1.cpp  mbc1.h  mbc3.cpp  mbc3.h  mbc5.cpp  mbc5.h  rom_only.cpp  rom_only.h
gb_lib/src/sound/: frame_sequencer.cpp  frequency_sweep_unit.cpp  frequency_sweep_unit.h  length_counter.cpp  length_counter.h  noise_channel.cpp  noise_channel.h  sound_channel.cpp  square_wave.cpp  square_wave_channel.cpp  square_wave_channel.h  volume_envelope.cpp  volume_envelope.h  wave_channel.cpp  wave_channel.h
gb_lib/test/: CMakeLists.txt  README.md
gb_lib/test/resources/bootroms/: README.md
gb_lib/test/src/: CpuTest.cpp  blargg_test.cpp  cartridge_test.cpp  cpu_test.cpp  mooneye_test.cpp  resource_helper.cpp  resource_helper.h
src/: audio_handler.cpp  main.cpp  main_window.cpp  main_window.h  text.cpp  text.h
src/views/: apu_view.cpp  cartridge_view.h  cpu_view.cpp  debugger.h  gameboy_view.cpp  gameboy_view.h  gui_element.h  io_view.cpp  memory_view.cpp  vram_view.cpp  vram_view.h
